# wasm-demo

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.client  Makefile  build-wasm.sh  docker-compose.yml  package.json
components/: VideoBox.jsx
hooks/: useCamera.js
pages/: index.js
public/: index.html  main.js  main.wasm  wasm.js  wasm.wasm
src_wasm/: main.c  tinyexpr.c
utils/: index.js
wasm/: main.cpp
